[gd_scene load_steps=2 format=3 uid="uid://lc1xgng5l3gv"]

[ext_resource type="Script" path="res://overlay/patent_view/Panel.gd" id="1_iqjen"]

[node name="Patent_View" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -192.0
offset_right = 448.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iqjen")

[node name="Player1" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 60.0
offset_right = 384.0
offset_bottom = 124.0
theme_override_font_sizes/font_size = 28
vertical_alignment = 1

[node name="Player2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 188.0
offset_right = 384.0
offset_bottom = 252.0
theme_override_font_sizes/font_size = 28
vertical_alignment = 1

[node name="Player3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 512.0
offset_top = 60.0
offset_right = 832.0
offset_bottom = 124.0
theme_override_font_sizes/font_size = 28
vertical_alignment = 1

[node name="Player4" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 512.0
offset_top = 188.0
offset_right = 832.0
offset_bottom = 252.0
theme_override_font_sizes/font_size = 28
vertical_alignment = 1

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -56.0
offset_right = 32.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "ok"

[connection signal="pressed" from="Panel/Button" to="Panel" method="_on_button_pressed"]
